--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "es5",
+    "types": ["jquery", "materialize-css"],
     "typeRoots": [
       "node_modules/@types"
     ],
